--- a/css/pattern.css
+++ b/css/pattern.css
@@ -1,18 +1,18 @@
 .container {
-    width: 1280px;
-    margin: 0 auto;
-    /* border: 1px black dotted; */
+  width: 1280px;
+  margin: 0 auto;
+  border: 1px black dotted;
 }
 .flex {
-    display: flex;
+  display: flex;
 }
 .btn {
-    background-color: #000;
-    height: 60px;
-    border: none;
-    border-radius: 16px;
-    transition: var(--transitoin);
+  background-color: #000;
+  height: 60px;
+  border: none;
+  border-radius: 16px;
+  transition: var(--transitoin);
 }
 .btn:hover {
-    background-color: var(--hover-color);
+  background-color: var(--hover-color);
 }
