--- a/css/main.css
+++ b/css/main.css
@@ -171,17 +171,20 @@
   border-radius: 0 30px 30px 0;
 }
 
-.category .all__category {
+.category {
+  margin-bottom: 200px;
+}
+.category .category__inner .category-title {
   justify-content: space-between;
   margin-top: 160px;
 }
-.category .all__category h2 {
+.category .category__inner .category-title h2 {
   font-family: Inter;
   font-size: 48px;
   font-weight: 600;
   letter-spacing: -1.92px;
 }
-.category .all__category button {
+.category .category__inner .category-title button {
   border: none;
   border-radius: 16px;
   background: var(--bgc-card-color);
@@ -190,4 +193,20 @@
   font-weight: 600;
   letter-spacing: -0.32px;
   padding: 20px 27px;
+}
+.category .category__inner .cards-category .card {
+  background: linear-gradient(180deg, rgba(112, 130, 70, 0) 0%, rgba(112, 130, 70, 0.1) 100%);
+  max-width: 180px;
+  border-radius: 30px;
+}
+.category .category__inner .cards-category .card a img {
+  margin-left: 40px;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.2);
+}
+.category .category__inner .cards-category .card a p {
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: -0.36px;
 }/*# sourceMappingURL=main.css.map */
