--- a/css/main.scss
+++ b/css/main.scss
@@ -189,25 +189,49 @@
     }
 }
 
-.category{
-    .all__category{
-        justify-content: space-between;
-        margin-top: 160px;
-        h2 {
-            font-family: Inter;
-            font-size: 48px;
-            font-weight: 600;
-            letter-spacing: -1.92px;
+.category {
+    margin-bottom: 200px;
+    .category__inner {
+        .category-title {
+            justify-content: space-between;
+            margin-top: 160px;
+            h2 {
+                font-family: Inter;
+                font-size: 48px;
+                font-weight: 600;
+                letter-spacing: -1.92px;
+            }
+            button {
+                border: none;
+                border-radius: 16px;
+                background: var(--bgc-card-color);
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 600;
+                letter-spacing: -0.32px;
+                padding: 20px 27px;
+                }
         }
-        button {
-            border: none;
-            border-radius: 16px;
-            background: var(--bgc-card-color);
-            font-family: Inter;
-            font-size: 16px;
-            font-weight: 600;
-            letter-spacing: -0.32px;
-            padding: 20px 27px;
+        .cards-category {
+            .card{
+                background: linear-gradient(180deg, rgba(112, 130, 70, 0.00) 0%, rgba(112, 130, 70, 0.10) 100%);
+                max-width: 180px;
+                border-radius: 30px;
+                a{
+                    img{
+                        margin-left: 40px;
+                        box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.2); 
+                    
+                    }
+                    p{
+                    text-align: center;
+                    font-family: Inter;
+                    font-size: 18px;
+                    font-weight: 600;
+                    letter-spacing: -0.36px;
+                    }
+                }
+            }
         }
     }
 }
