--- a/css/main.css
+++ b/css/main.css
@@ -194,19 +194,38 @@
   letter-spacing: -0.32px;
   padding: 20px 27px;
 }
-.category .category__inner .cards-category .card {
-  background: linear-gradient(180deg, rgba(112, 130, 70, 0) 0%, rgba(112, 130, 70, 0.1) 100%);
-  max-width: 180px;
-  border-radius: 30px;
+.category .category__inner .cards-category {
+  gap: 40px;
 }
-.category .category__inner .cards-category .card a img {
-  margin-left: 40px;
-  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.2);
+.category .category__inner .cards-category .card {
+  margin-top: 80px;
+  width: 180px;
+  border-radius: 30px;
+  position: relative;
+  background: linear-gradient(180deg, rgba(112, 130, 70, 0) 0%, rgba(112, 130, 70, 0.1) 100%);
+}
+.category .category__inner .cards-category .card a {
+  margin: 0 40px;
+  text-decoration: none;
+}
+.category .category__inner .cards-category .card a .food-bottom {
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: 20px;
+  right: 20px;
+}
+.category .category__inner .cards-category .card a .food-top {
+  width: 100px;
+  height: 100px;
+  z-index: -1;
 }
 .category .category__inner .cards-category .card a p {
+  margin-top: 30px;
   text-align: center;
   font-family: Inter;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: -0.36px;
+  color: #000;
 }/*# sourceMappingURL=main.css.map */
