--- a/css/main.scss
+++ b/css/main.scss
@@ -213,22 +213,37 @@
                 }
         }
         .cards-category {
+            gap: 40px;
             .card{
-                background: linear-gradient(180deg, rgba(112, 130, 70, 0.00) 0%, rgba(112, 130, 70, 0.10) 100%);
-                max-width: 180px;
+                margin-top: 80px;
+                width: 180px;
                 border-radius: 30px;
+                position: relative;
+                background: linear-gradient(180deg, rgba(112, 130, 70, 0.00) 0%, rgba(112, 130, 70, 0.10) 100%);
                 a{
-                    img{
-                        margin-left: 40px;
-                        box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.2); 
+                    margin: 0 40px;
+                    text-decoration: none;
+                            .food-bottom{
+                                position: absolute;
+                                width: 100px;
+                                height: 100px;
+                                top: 20px;
+                                right: 20px;
+                            }
+                            .food-top {
+                                width: 100px;
+                                height: 100px;
+                                z-index: -1; 
                     
                     }
                     p{
-                    text-align: center;
-                    font-family: Inter;
-                    font-size: 18px;
-                    font-weight: 600;
-                    letter-spacing: -0.36px;
+                        margin-top: 30px;
+                        text-align: center;
+                        font-family: Inter;
+                        font-size: 18px;
+                        font-weight: 600;
+                        letter-spacing: -0.36px;
+                        color: #000;
                     }
                 }
             }
