--- a/css/main.css
+++ b/css/main.css
@@ -194,38 +194,16 @@
   letter-spacing: -0.32px;
   padding: 20px 27px;
 }
-.category .category__inner .cards-category {
-  overflow: hidden;
-  gap: 40px;
-}
-.category .category__inner .cards-category a {
-  text-decoration: none;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.category .category__inner .cards-category a .card {
-  margin-top: 80px;
-  width: 180px;
-  height: 202px;
-  border-radius: 30px;
-  position: relative;
+.category .category__inner .cards-category .card {
   background: linear-gradient(180deg, rgba(112, 130, 70, 0) 0%, rgba(112, 130, 70, 0.1) 100%);
+  max-width: 180px;
+  border-radius: 30px;
 }
-.category .category__inner .cards-category a .card .food-bottom {
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  top: 30px;
-  right: 20px;
+.category .category__inner .cards-category .card a img {
+  margin-left: 40px;
+  box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.2);
 }
-.category .category__inner .cards-category a .card .food-top {
-  margin: 0 40px;
-  width: 100px;
-  height: 100px;
-  z-index: -1;
-}
-.category .category__inner .cards-category a .card p {
-  margin-top: 50px;
+.category .category__inner .cards-category .card a p {
   text-align: center;
   font-family: Inter;
   font-size: 18px;
