--- a/css/main.scss
+++ b/css/main.scss
@@ -213,58 +213,24 @@
                 }
         }
         .cards-category {
-            overflow: hidden;
-            gap: 40px;
+            .card{
+                background: linear-gradient(180deg, rgba(112, 130, 70, 0.00) 0%, rgba(112, 130, 70, 0.10) 100%);
+                max-width: 180px;
+                border-radius: 30px;
                 a{
-                    text-decoration: none;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    .card{
-                        margin-top: 80px;
-                        width: 180px;
-                        height: 202px;
-                        border-radius: 30px;
-                        position: relative;
-                        background: linear-gradient(180deg, rgba(112, 130, 70, 0.00) 0%, rgba(112, 130, 70, 0.10) 100%);
-                            .food-bottom{
-                                position: absolute;
-                                width: 100px;
-                                height: 100px;
-                                top: 30px;
-                                right: 20px;
-                            }
-                            .food-top {
-                                margin: 0 40px;
-                                width: 100px;
-                                height: 100px;
-                                z-index: -1; 
-                            }
-                            p{
-                                margin-top: 50px;
-                                text-align: center;
-                                font-family: Inter;
-                                font-size: 18px;
-                                font-weight: 600;
-                                letter-spacing: -0.36px;
-                                color: #000;
-                            }
-                            
-                        }
-                        .vegan {
-                            background: linear-gradient(180deg, rgba(108, 198, 63, 0.00) 0%, rgba(108, 198, 63, 0.10) 100%);
-                        }
-                        .meat {
-                            background: linear-gradient(180deg, rgba(204, 38, 27, 0.00) 0%, rgba(204, 38, 27, 0.10) 100%);
-                        }
-                        .dessert {
-                            background: linear-gradient(180deg, rgba(240, 158, 0, 0.00) 0%, rgba(240, 158, 0, 0.10) 100%);
-                        }
-                        .lunch {
-                            background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.05) 100%);
-                        }
-                        .chocolate {
-                            background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(241, 7, 7, 0.1) 100%);
-                        }
+                    img{
+                        margin-left: 40px;
+                        box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.2); 
+                    
+                    }
+                    p{
+                    text-align: center;
+                    font-family: Inter;
+                    font-size: 18px;
+                    font-weight: 600;
+                    letter-spacing: -0.36px;
+                    }
+                }
             }
         }
     }
