--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@
 }
 
 .category {
-  margin-bottom: 200px;
+  margin-bottom: 183px;
 }
 .category .category__inner .category-title {
   justify-content: space-between;
@@ -247,4 +247,24 @@
 }
 .category .category__inner .cards-category a .chocolate {
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(241, 7, 7, 0.1) 100%);
+}
+
+.main {
+  margin-bottom: 200px;
+}
+.main .recipes_inner .recipes-title h2 {
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 600;
+  letter-spacing: -1.92px;
+  text-align: center;
+}
+.main .recipes_inner .recipes-title p {
+  color: rgba(0, 0, 0, 0.6);
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-top: 24px;
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
